--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "author": "WK",
   "dependencies" : {
-      "angular" : "^1.5.8"
+      "angular" : "^1.5.8",
+      "bootstrap" : "^3.3.7"
   }
 }
