--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "gulp-watch" : "^4.3.9",
     "bower" : "1.7.9",    
     "babel-preset-es2015" :"^6.14.0",
-    "ejs": "^2.5.2"
+    "ejs": "^2.5.2",
+    "gulp-concat" : "^2.6.0",
+    "gulp-less" : "^3.1.0",
+    "body-parser" : "^1.15.2",
+    "yql" : "^1.0.2"
   }
 }
