--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "author": "WK",
   "dependencies" : {
       "angular" : "^1.5.8",
-      "bootstrap" : "^3.3.7"
+      "bootstrap" : "^3.3.7",
+      "angular-bootstrap": "^2.1.3"
   }
 }
