--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
   },  
   "devDependencies": {
     "express": "^4.14.0",
+    "connect-livereload": "^0.6.0",
     "gulp-cli" : "^1.2.2",
     "gulp" : "^3.9.1",
     "gulp-babel" : "^6.1.2",
     "gulp-sourcemaps" : "^1.6.0",    
     "gulp-watch" : "^4.3.9",
-    "bower" : "1.7.9",    
+    "bower" : "^1.7.9",    
     "babel-preset-es2015" :"^6.14.0",
     "ejs": "^2.5.2",
     "gulp-concat" : "^2.6.0",
     "gulp-less" : "^3.1.0",
     "body-parser" : "^1.15.2",
-    "yql" : "^1.0.2"
+    "yql" : "^1.0.2",
+    "promise" : "^7.1.1"
   }
 }
