Changed build process

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "private",
   "scripts": {
     "build-server-dev": "npm run install-libs",
-    "install-libs": "npm install && bower install",
+    "install-libs": "npm install && bower install && gulp build",
     "build-dev": "gulp build && npm run start-server-dev",
     "start-server-dev" : "node index.js"
   },  
